small updates, fixed skewed 'about me' element not showing

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -42,7 +42,7 @@ body {
     background: linear-gradient(#11111170, #1111119f, #1111119f, #11111170);
     z-index: 50;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto 35% auto;
 }
 
 .show_nav {
@@ -66,7 +66,7 @@ body {
     font-family: 'Poppins', sans-serif;
     color: #fff;
     text-decoration: none;
-    font-size: 1.4em;
+    font-size: 1.2em;
 }
 
 
@@ -171,7 +171,6 @@ body {
     background: var(--main-bkg-color);
     z-index: 10;
     scroll-behavior: smooth;
-    overflow-y: scroll;
 }
 
 .profile_img_bkg {
@@ -294,7 +293,7 @@ body {
     background: var(--red-bkg);
     transform-origin: top right;
     transform: skewY(2deg);
-    z-index: -2;
+    z-index: -10;
     box-shadow: -10px -10px 5px #111;
 }
 
